--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ plugins {
     id 'application'
 }
 
+sourceCompatibility = 8
+targetCompatibility = 8
+
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
